Convert nodes with TensorSSA.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ find_package(Torch REQUIRED)
 find_package(TorchVision REQUIRED)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS})
 
-file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)
+include_directories(${PROJECT_SOURCE_DIR})
+
+file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/passes/*.cpp ${PROJECT_SOURCE_DIR}/util/*.cpp)
 add_executable(example ${SOURCES})
 target_link_libraries(example ${TORCH_LIBRARIES} TorchVision::TorchVision)
