--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,10 @@ file(GLOB NNC_EXAMPLE_DYN_SHAPE ${PROJECT_SOURCE_DIR}/nnc_example_dyn_shape.cpp)
 file(GLOB SIMPLE_LOOP_NNC ${PROJECT_SOURCE_DIR}/simple_loop_nnc.cpp)
 
 add_library(long-tail ${SOURCES})
-target_link_libraries(long-tail ${TORCH_LIBRARIES} TorchVision::TorchVision)
+target_link_libraries(long-tail ${TORCH_LIBRARIES} TorchVision::TorchVision nlohmann_json::nlohmann_json)
 
 add_executable(example ${EXAMPLE})
 target_link_libraries(example long-tail)
 
 add_executable(test_lowering ${PROJECT_SOURCE_DIR}/testing/test_lowering.cpp)
-target_link_libraries(test_lowering long-tail nlohmann_json::nlohmann_json)
+target_link_libraries(test_lowering long-tail)
