--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,17 @@ set(CMAKE_CXX_STANDARD 14)
 
 project(long-tail)
 
+include(cmake/utils/Util.cmake)
+
+# Options
+long_tail_option(TORCH_TRT "enable torch-trt" ON)
+
+# Packages
 find_package(Torch REQUIRED)
 find_package(TorchVision REQUIRED)
-find_package(torchtrt REQUIRED)
+if(TORCH_TRT)
+    find_package(torchtrt REQUIRED)
+endif(TORCH_TRT)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS})
 
@@ -21,17 +29,28 @@ file(GLOB SOURCES
         ${PROJECT_SOURCE_DIR}/tensorexpr/*.cpp
         ${PROJECT_SOURCE_DIR}/util/*.cpp)
 
+set(LONG_TAIL_LINK_LIBS 
+        ${TORCH_LIBRARIES}
+        TorchVision::TorchVision
+        nlohmann_json::nlohmann_json)
+
+if(TORCH_TRT)
+set(LONG_TAIL_LINK_LIBS ${LONG_TAIL_LINK_LIBS} torchtrt)
+endif(TORCH_TRT)
+
 add_library(long-tail ${SOURCES})
-target_link_libraries(long-tail ${TORCH_LIBRARIES} TorchVision::TorchVision torchtrt nlohmann_json::nlohmann_json)
+target_link_libraries(long-tail ${LONG_TAIL_LINK_LIBS})
 
 add_executable(example ${PROJECT_SOURCE_DIR}/example.cpp)
 target_link_libraries(example long-tail)
 
-add_executable(test_lowering ${PROJECT_SOURCE_DIR}/testing/test_lowering.cpp)
-target_link_libraries(test_lowering long-tail)
+if(TORCH_TRT)
+    add_executable(test_lowering ${PROJECT_SOURCE_DIR}/testing/test_lowering.cpp)
+    target_link_libraries(test_lowering long-tail)
 
-add_executable(run_trt ${PROJECT_SOURCE_DIR}/run_trt.cpp)
-target_link_libraries(run_trt long-tail)
+    add_executable(run_trt ${PROJECT_SOURCE_DIR}/run_trt.cpp)
+    target_link_libraries(run_trt long-tail)
 
-add_executable(run_net_trt ${PROJECT_SOURCE_DIR}/run_net_trt.cpp)
-target_link_libraries(run_net_trt long-tail)
+    add_executable(run_net_trt ${PROJECT_SOURCE_DIR}/run_net_trt.cpp)
+    target_link_libraries(run_net_trt long-tail)
+endif(TORCH_TRT)
