--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ project(long-tail)
 include(cmake/utils/Util.cmake)
 
 # Options
-long_tail_option(TORCH_TRT "enable torch-trt" ON)
+option(ENABLE_TORCH_TRT "enable torch-trt" ON)
 
 # Packages
 find_package(Torch REQUIRED)
 find_package(TorchVision REQUIRED)
-if(TORCH_TRT)
-    find_package(torchtrt REQUIRED)
-endif(TORCH_TRT)
+if(ENABLE_TORCH_TRT)
+  find_package(torchtrt REQUIRED)
+endif(ENABLE_TORCH_TRT)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS})
 
@@ -24,19 +24,19 @@ add_subdirectory(json)
 include_directories(${PROJECT_SOURCE_DIR})
 
 file(GLOB SOURCES
-        ${PROJECT_SOURCE_DIR}/fuser/*.cpp
-        ${PROJECT_SOURCE_DIR}/passes/*.cpp
-        ${PROJECT_SOURCE_DIR}/tensorexpr/*.cpp
-        ${PROJECT_SOURCE_DIR}/util/*.cpp)
+  ${PROJECT_SOURCE_DIR}/fuser/*.cpp
+  ${PROJECT_SOURCE_DIR}/passes/*.cpp
+  ${PROJECT_SOURCE_DIR}/tensorexpr/*.cpp
+  ${PROJECT_SOURCE_DIR}/util/*.cpp)
 
 set(LONG_TAIL_LINK_LIBS 
-        ${TORCH_LIBRARIES}
-        TorchVision::TorchVision
-        nlohmann_json::nlohmann_json)
+  ${TORCH_LIBRARIES}
+  TorchVision::TorchVision
+  nlohmann_json::nlohmann_json)
 
-if(TORCH_TRT)
-set(LONG_TAIL_LINK_LIBS ${LONG_TAIL_LINK_LIBS} torchtrt)
-endif(TORCH_TRT)
+if(ENABLE_TORCH_TRT)
+  set(LONG_TAIL_LINK_LIBS ${LONG_TAIL_LINK_LIBS} torchtrt)
+endif(ENABLE_TORCH_TRT)
 
 add_library(long-tail ${SOURCES})
 target_link_libraries(long-tail ${LONG_TAIL_LINK_LIBS})
@@ -44,13 +44,13 @@ target_link_libraries(long-tail ${LONG_TAIL_LINK_LIBS})
 add_executable(example ${PROJECT_SOURCE_DIR}/example.cpp)
 target_link_libraries(example long-tail)
 
-if(TORCH_TRT)
-    add_executable(test_lowering ${PROJECT_SOURCE_DIR}/testing/test_lowering.cpp)
-    target_link_libraries(test_lowering long-tail)
+add_executable(test_lowering ${PROJECT_SOURCE_DIR}/testing/test_lowering.cpp)
+target_link_libraries(test_lowering long-tail)
 
-    add_executable(run_trt ${PROJECT_SOURCE_DIR}/run_trt.cpp)
-    target_link_libraries(run_trt long-tail)
+if(ENABLE_TORCH_TRT)
+  add_executable(run_trt ${PROJECT_SOURCE_DIR}/run_trt.cpp)
+  target_link_libraries(run_trt long-tail)
 
-    add_executable(run_net_trt ${PROJECT_SOURCE_DIR}/run_net_trt.cpp)
-    target_link_libraries(run_net_trt long-tail)
-endif(TORCH_TRT)
+  add_executable(run_net_trt ${PROJECT_SOURCE_DIR}/run_net_trt.cpp)
+  target_link_libraries(run_net_trt long-tail)
+endif(ENABLE_TORCH_TRT)
