Remove CSE for correct buffer loading.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 project(long-tail)
 
-include(cmake/utils/Util.cmake)
-
 # Options
 option(ENABLE_TORCH_TRT "enable torch-trt" ON)
 
@@ -54,3 +52,6 @@ if(ENABLE_TORCH_TRT)
   add_executable(run_net_trt ${PROJECT_SOURCE_DIR}/run_net_trt.cpp)
   target_link_libraries(run_net_trt long-tail)
 endif(ENABLE_TORCH_TRT)
+
+cuda_add_executable(test_cuda ${PROJECT_SOURCE_DIR}/test_cuda.cu)
+target_link_libraries(test_cuda long-tail)
