[update] add an example of benchmark in README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
-set(CMAKE_CXX_STANDARD 14)
+
+# PYTORCH 2.1.0
+set(CMAKE_CXX_STANDARD 17)
+
+# # PYTORCH 2.0.0
+# set(CMAKE_CXX_STANDARD 14)
 
 project(long-tail)
 
@@ -36,6 +41,7 @@ set(LONG_TAIL_LINK_LIBS
   nlohmann_json::nlohmann_json
 )
 
+
 if(ENABLE_TORCH_TRT)
   set(LONG_TAIL_LINK_LIBS ${LONG_TAIL_LINK_LIBS} torchtrt)
 endif(ENABLE_TORCH_TRT)
@@ -44,17 +50,17 @@ file(GLOB CUPTI_EXT_SOURCES
   ${PROJECT_SOURCE_DIR}/util/cupti_ext/*.cpp
 )
 
-add_library(cupti_ext ${CUPTI_EXT_SOURCES})
+add_library(cupti_ext SHARED ${CUPTI_EXT_SOURCES})
 target_link_libraries(cupti_ext CUDA::cupti CUDA::nvperf_host CUDA::nvperf_target)
 
-add_library(long-tail ${SOURCES})
+add_library(long-tail SHARED ${SOURCES})
 target_link_libraries(long-tail ${LONG_TAIL_LINK_LIBS} cupti_ext)
 
 add_library(ltprof SHARED ${PROJECT_SOURCE_DIR}/util/profile.cpp ${PROJECT_SOURCE_DIR}/util/metrics.cpp ${CUPTI_EXT_SOURCES})
 target_link_libraries(ltprof ${TORCH_LIBRARIES} cupti_ext)
 
-add_executable(example ${PROJECT_SOURCE_DIR}/example.cpp)
-target_link_libraries(example long-tail)
+add_executable(fait ${PROJECT_SOURCE_DIR}/fait.cpp)
+target_link_libraries(fait long-tail)
 
 add_executable(run_ts ${PROJECT_SOURCE_DIR}/run_ts.cpp)
 target_link_libraries(run_ts long-tail)
